Tries + read data

--- a/cpp_backend/data_gen/CliniQuery_Data.ipynb
+++ b/cpp_backend/data_gen/CliniQuery_Data.ipynb
@@ -1,29 +1,15 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install faker"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "GR0_G8NVlkDr"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install faker"
+      ]
     },
     {
       "cell_type": "code",
@@ -40,30 +26,35 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "fake = Faker()\n",
-        "Faker.seed(16)"
-      ],
+      "execution_count": 35,
       "metadata": {
         "id": "MrpumyyLd9z5"
       },
-      "execution_count": 35,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "fake = Faker()\n",
+        "Faker.seed(16)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Generate 100,000 full names\n",
-        "full_names = [fake.first_name() + ' ' + fake.last_name() for x in range(100000)]"
-      ],
+      "execution_count": 36,
       "metadata": {
         "id": "0827Oc_se7Uk"
       },
-      "execution_count": 36,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Generate 100,000 full names\n",
+        "full_names = [fake.first_name() + ' ' + fake.last_name() for x in range(100000)]"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {
+        "id": "MX2NsPiHf0z1"
+      },
+      "outputs": [],
       "source": [
         "# List of symptoms\n",
         "symptoms = [\n",
@@ -71,46 +62,39 @@
         "    'Bleeding', 'Seizures', 'Dizziness', 'Headaches', 'Shortness of breath',\n",
         "    'Memory loss', 'Swelling', 'Diarrhea', 'Constipation', 'Joint pain'\n",
         "]"
-      ],
-      "metadata": {
-        "id": "MX2NsPiHf0z1"
-      },
-      "execution_count": 37,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {
+        "id": "MTK3KoCSe_YU"
+      },
+      "outputs": [],
       "source": [
         "# Generate random 0/1 values for each symptom (100,000 rows x 16 symptoms)\n",
         "np.random.seed(16)\n",
         "symptom_data = np.random.choice([0, 1], size=(100000, len(symptoms)))"
-      ],
-      "metadata": {
-        "id": "MTK3KoCSe_YU"
-      },
-      "execution_count": 38,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "id": "D3NtnKuhfEBB"
+      },
+      "outputs": [],
       "source": [
         "# Create DataFrame\n",
         "df = pd.DataFrame({\n",
         "    'Full Name': full_names,\n",
         "    **{symptom: symptom_data[:, i] for i, symptom in enumerate(symptoms)}\n",
         "})"
-      ],
-      "metadata": {
-        "id": "D3NtnKuhfEBB"
-      },
-      "execution_count": 39,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(df.head())"
-      ],
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -118,11 +102,10 @@
         "id": "KVHc_m_6gURd",
         "outputId": "08fb4332-5240-4512-9e84-02ee808684cc"
       },
-      "execution_count": 41,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "          Full Name  Fever  Chest pains  Abdominal pain  Cough  Fatigue  \\\n",
             "0  Michael Castillo      1            0               1      1        1   \n",
@@ -146,19 +129,36 @@
             "4            1         1         0             1           0  \n"
           ]
         }
+      ],
+      "source": [
+        "print(df.head())"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Save to CSV\n",
-        "df.to_csv('CliniQuery_Data.csv', index=False)"
-      ],
+      "execution_count": 40,
       "metadata": {
         "id": "vtzVjifPgQv8"
       },
-      "execution_count": 40,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Save to CSV\n",
+        "df.to_csv('CliniQuery_Data.csv', index=False)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
